[package]
name = "libset"
version = "0.1.2"
edition = "2021"
license = "GPL-2.0"
description = " Libset is a library that allows Rust applications to easily manage their configuration files."
homepage = "https://libset.edfloreshz.dev/"
documentation = "https://docs.rs/libset"
repository = "https://github.com/edfloreshz/libset/"
readme = "README.md"
exclude = [".idea"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dirs = "4.0.0"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.72"
erased-serde = "0.3.21"
dyn-clone = "1.0.6"
thiserror = "1.0.56"

[target.'cfg(unix)'.dependencies]
xdg = "2.5.2"

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"
