[package]
name = "libset"
version = "0.1.2"
edition = "2021"
license = "GPL-2.0"
description = " Easily manage configuration files."
homepage = "https://libset.edfloreshz.dev/"
documentation = "https://docs.rs/libset"
repository = "https://github.com/edfloreshz/libset/"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8.10"
ron = "0.8.1"
serde_json = "1.0.72"
atomicwrites = "0.4.3"
tracing = "0.1.37"
builder-pattern = { version = "0.4", default-features = false }
derive_builder = "0.13.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.5.2"

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"
