[package]
name = "libset"
version = "0.1.6"
edition = "2021"
license = "GPL-2.0"
description = "A configuration file management library for Rust applications."
homepage = "https://libset.edfloreshz.dev/"
documentation = "https://docs.rs/libset"
repository = "https://github.com/edfloreshz/libset/"
readme = "README.md"

[features]
default = ["json"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
ron = ["dep:ron"]

[dependencies]
dirs = "5.0.1"
tracing = "0.1.37"
thiserror = "1.0.56"
atomicwrites = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
toml = { version = "0.8.10", optional = true }
ron = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.72", optional = true }

[target.'cfg(unix)'.dependencies]
xdg = "2.5.2"

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"
